<resources>
    <string name="app_name">Mobiilineuvolakortti</string>
    <string name="child_name">Lapsen nimi</string>
    <string name="date_of_birth">Syntymäpäivä</string>
    <string name="add_child">Lisää lapsen tiedot:</string>
    <string name="save">Tallenna</string>
    <string name="cancel">Peruuta</string>
    <string name="birth_weigh">Syntymäpaino</string>
    <string name="birth_height">Syntymäpituus</string>
    <string name="choose">Valitse</string>
    <string name="weight_g">kg</string>
    <string name="height_cm">cm</string>
    <string name="head">Päänympärys</string>
    <string name="add_vaccine">Valitse rokote:</string>
    <string name="add_date_given">Valitse päivämäärä:</string>
    <string name="add_vaccination">Lisää rokotus:</string>
    <string name="edit_child">Muuta lapsen tietoja:</string>
    <string name="add_weight">Paino (kg)</string>
    <string name="add_height">Pituus (cm)</string>
    <string name="add_head">Päänympärys (cm)</string>
    <string name="add_growth">Lisää kasvutiedot:</string>
    <string name="add_development">Lisää kehitysaskel:</string>
    <string name="development">Kehitysaskel</string>
    <string name="vaccine">Rokote</string>
    <string name="date">Päivämäärä</string>
    <string name="vaccines">Rokotukset - </string>
</resources>
