<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginRight="@dimen/activity_vertical_margin"
    android:layout_marginLeft="@dimen/activity_vertical_margin"
    tools:context="mobiili.neuvolakortti.EditChildProfileActivity">

    <ImageView
        android:layout_marginTop="16dp"
        android:id="@+id/photo"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:src="@drawable/ic_face_24dp"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/et_ec_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/child_name"
        android:layout_marginBottom="@dimen/margin_between"
        android:layout_marginTop="@dimen/margin_between"
        android:inputType="text"
        android:textSize="@dimen/et_text_size"/>

    <TextView
        android:id="@+id/tvDateOfBirth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date_of_birth"
        android:textSize="@dimen/tv_text_size"/>

    <Button
        android:id="@+id/date_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose"
        android:onClick="datePicker"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:text="Syntymämitat:"
        android:textSize="@dimen/tv_text_size"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/activity_vertical_margin">

        <EditText
            android:id="@+id/et_ec_weight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/birth_weigh"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            android:textSize="@dimen/et_text_size"/>

        <TextView
            android:id="@+id/tv_ec_weight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/weight_g"
            android:layout_weight="0.5"
            android:textSize="@dimen/tv_text_size"/>

        <EditText
            android:id="@+id/et_ec_height"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/birth_height"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            android:textSize="@dimen/et_text_size"/>

        <TextView
            android:id="@+id/tv_ec_height"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/height_cm"
            android:layout_weight="0.5"
            android:textSize="@dimen/tv_text_size"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/activity_vertical_margin">

        <EditText
            android:id="@+id/et_ec_head"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:hint="@string/head"
            android:inputType="numberDecimal"
            android:textSize="@dimen/et_text_size"/>

        <TextView
            android:id="@+id/tv_head"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/height_cm"
            android:textSize="@dimen/tv_text_size"/>

    </LinearLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/activity_horizontal_margin">



        <Button
            android:id="@+id/btn_ec_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:onClick="cancelEditChild"/>

        <Button
            android:id="@+id/btn_ec_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:onClick="saveEditChild"/>

    </LinearLayout>



</LinearLayout>
