<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/margin_between">

    <EditText
        android:id="@+id/dialog_add_weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_weight"
        android:inputType="numberDecimal"/>

    <EditText
        android:id="@+id/dialog_add_height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_height"
        android:inputType="numberDecimal"/>

    <EditText
        android:id="@+id/dialog_add_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_head"
        android:inputType="numberDecimal"/>


    <DatePicker
        android:id="@+id/datePicker_vaccine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        android:spinnersShown="true"/>

</LinearLayout>